--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <i class="fas fa-circle active"></i>
         <i class="fas fa-circle"></i>
         <i class="fas fa-circle"></i>
-        <i class="fas fa-circle"></i>
       </div>
     </div>
 
@@ -66,5 +65,7 @@
         </div>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
